# Carcassonne

./: .gitignore  CMakeLists.txt  generate-apidoc.sh
apidoc/: Makefile  carcassonne  carcassonne.data.rst  carcassonne.rst  carcassonne.system.rst  carcassonne.tensors.rst  carcassonne.tests.rst-disabled  conf.py  index.rst  make.bat
carcassone/tests/: __init__.py  test_utils.py
carcassonne/: compression.py  data.py  expectation.py  normalization.py  policies.py  simulator.py  sparse.py  system.py  tensors.py  utils.py
carcassonne/data/: __init__.py  cost_tracker.py
carcassonne/system/: _1d.py  _1d2d.py  _2d.py  __init__.py  base.py
carcassonne/tensors/: _1d.py  dense.py  ndarray.py  normalization.py  sparse.py
carcassonne/tests/: __init__.py  test_compression.py  test_data.py  test_data_cost_tracker.py  test_expectation.py  test_normalization.py  test_policies_2d_in_1d.py  test_simulator_1d.py  test_simulator_1d2d.py  test_simulator_2d.py  test_simulator_2d_in_15d.py  test_simulator_2d_in_1d.py  test_sparse.py  test_system.py  test_system_1d.py  test_tensors.py  test_tensors_1d.py  test_tensors_dense.py  test_tensors_ndarray.py  test_tensors_normalization.py  test_tensors_sparse.py  test_two_site_operator.py  test_utils.py
includes/: either.hpp  sparse.hpp
miscellaneous/: grep-for.sh
miscellaneous/contraction-searches/: ContractionSearch.hs  tests.hs  (+4 more)
scripts/: compute2DTIfinite.py  computeHSfinite.py  computeTIfinite.py  computeTIinfinite.py  estimateTIfinite.py
tests/: CMakeLists.txt  _template.cpp  either.cpp  sparse.cpp  test_utils.hpp
(+2 files in other folders)
